Changed the name in index file

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <!-- Change this code here by copy and pasting your template on line 15 -->
 <p>Welcome to your first GitHub Pages website!!!</p>
-<p> HI I'm Drashti </p>
+<p> HI I'm Janak </p>
 
 </body>
 </html>
