--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
 
 <img src="https://octodex.github.com/images/daftpunktocat-thomas.gif" id="octocat" alt="octocat-gif" />
 
-<!-- Change this code here by copy and pasting your template on line 15 -->
+<!-- Change this code here by copy and pasting your template-->
 <p>Welcome to your first GitHub Pages website!</p>
 <p> HI I'm Janak </p>
-
 </body>
 </html>
